Propiedades-agregar fotos v.1

--- a/propiedades.html
+++ b/propiedades.html
@@ -32,12 +32,13 @@
     <main class="main">
         <section class="grids">
             <section class="seccion-1">
-                <div>PROP-1</div>
-                <div>PROP-2</div>
-                <div>PROP-3</div>
-                <div>PROP-4</div>
-                <div>PROP-5</div>
-                <div>PROP-6</div>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                
             </section>
             <!-- Fotos de la propiedad seleccionada -->
             <section class="seccion-2">
