--- a/propiedad-3.html
+++ b/propiedad-3.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./logo-inmobiliaria.webp">
-    <title>Propiedades</title>
+    <title>Propiedad-3</title>
 </head>
 
 <body>
@@ -32,9 +32,9 @@
     <main class="main">
         <section class="grids">
             <section class="seccion-1">
-                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
+                <a class="fotos-principales" href="./propiedades.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
                 <a class="fotos-principales" href="./propiedad-2.html"><img src="./img-inmobiliaria/prop2/Prop2-Principal.jpeg" alt="prop2-principal"></a>
-                <a class="fotos-principales" href="./propiedad-3.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop3-principal"></a>
+                <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop3/Prop3-principal.jpeg" alt="prop3-principal"></a>
                 <a class="fotos-principales" href="./propiedad-4.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop4-principal"></a>
                 <a class="fotos-principales" href="./propiedad-5.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop5-principal"></a>
                 <a class="fotos-principales" href="./propiedad-6.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop6-principal"></a>
@@ -43,10 +43,10 @@
             <!-- Fotos de la propiedad seleccionada -->
             <section class="seccion-2">
                 <section class="fotos-propiedades">
-                   <a href="#"><img src="./img-inmobiliaria/prop1/Prop1-foto-A.jpeg" alt="prop1-foto-A"></a>
-                   <a href="#"><img src="./img-inmobiliaria/prop1/Prop1-foto-B.jpeg" alt="prop1-foto-B"></a>
-                   <a href="#"><img src="./img-inmobiliaria/prop1/Prop1-foto-C.webp" alt="prop1-foto-C"></a>
-                    <a href="#"><img src="./img-inmobiliaria/prop1/Prop1-foto-D.webp" alt="prop1-foto-D"></a>
+                   <a href="#"><img src="img-inmobiliaria/prop3/Prop3-foto-A.jpeg" alt="prop3-foto-A"></a>
+                   <a href="#"><img src="./img-inmobiliaria/prop3/Prop3-foto-B.jpeg" alt="prop3-foto-B"></a>
+                   <a href="#"><img src="./img-inmobiliaria/prop3/Prop3-foto-C.jpeg" alt="prop3-foto-C"></a>
+                    <a href="#"><img src="./img-inmobiliaria/prop3/Prop3-foto-D.webp" alt="prop3-foto-D"></a>
                 </section>
                 <!-- Descripcion textual -->
                 <section class="descripcion-propiedades">
