terminado-V1.0-sin-Bootstrap
version basica sin Bootstrap

--- a/propiedad-3.html
+++ b/propiedad-3.html
@@ -35,9 +35,9 @@
                 <a class="fotos-principales" href="./propiedades.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop1-principal"></a>
                 <a class="fotos-principales" href="./propiedad-2.html"><img src="./img-inmobiliaria/prop2/Prop2-Principal.jpeg" alt="prop2-principal"></a>
                 <a class="fotos-principales" href="#"><img src="./img-inmobiliaria/prop3/Prop3-principal.jpeg" alt="prop3-principal"></a>
-                <a class="fotos-principales" href="./propiedad-4.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop4-principal"></a>
-                <a class="fotos-principales" href="./propiedad-5.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop5-principal"></a>
-                <a class="fotos-principales" href="./propiedad-6.html"><img src="./img-inmobiliaria/prop1/Prop1-principal.jpeg" alt="prop6-principal"></a>
+                <a class="fotos-principales" href="./propiedad-4.html"><img src="./img-inmobiliaria/prop4/Prop4-principal.jpeg" alt="prop4-principal"></a>
+                <a class="fotos-principales" href="./propiedad-5.html"><img src="./img-inmobiliaria/prop5/Prop5-principal.jpeg" alt="prop5-principal"></a>
+                <a class="fotos-principales" href="./propiedad-6.html"><img src="./img-inmobiliaria/prop6/Prop6-principal.jpeg" alt="prop6-principal"></a>
 
             </section>
             <!-- Fotos de la propiedad seleccionada -->
@@ -50,7 +50,7 @@
                 </section>
                 <!-- Descripcion textual -->
                 <section class="descripcion-propiedades">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nam at molestias porro, id ad?</p>
+                    <p>descripcion de la propiedad: metros cuadrados, ambientes, baños, etc</p>
                 </section>
             </section>
         </section>
