--- a/propiedad-5.html
+++ b/propiedad-5.html
@@ -50,7 +50,7 @@
                 </section>
                 <!-- Descripcion textual -->
                 <section class="descripcion-propiedades">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nam at molestias porro, id ad?</p>
+                    <p> descripcion de la propiedad: metros cuadrados, ambientes, baños, etc</p>
                 </section>
             </section>
         </section>
